--- a/ot-pruebatec-front/src/app/app.component.html
+++ b/ot-pruebatec-front/src/app/app.component.html
@@ -1,4 +1,4 @@
-<main class="main container-fluid d-flex flex-column vw-100 vh-100 m-0 p-0 justify-content-between">
+<main class="main container-fluid vw-100 vh-100 m-0 p-0 justify-content-between">
 
   <section class="header container-fluid w-100 m-0 p-0">
 
@@ -12,9 +12,5 @@
 
   </section>
 
-  <section class="footer container-fluid m-0 p-0">
-
-    <app-footer></app-footer>
-  </section>
 
 </main>
