angular material works

--- a/ot-pruebatec-front/src/app/components/addform/addform.component.scss
+++ b/ot-pruebatec-front/src/app/components/addform/addform.component.scss
@@ -2,6 +2,10 @@
 
 .form-wrapper {
 
-    border: 1px solid black;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: auto;
+    padding: 2em;
     
 }
