--- a/ot-pruebatec-front/src/app/components/main/main.component.html
+++ b/ot-pruebatec-front/src/app/components/main/main.component.html
@@ -1,13 +1,13 @@
 
-<section class="main-wrapper d-flex w-100 h-100 m-0 p-0">
+<section class="main-wrapper">
 
-  <div class="main-left d-flex w-25 h-100 m-0 p-0">
+  <div class="main-left">
 
     <app-addform></app-addform>
 
   </div>
 
-  <div class="main-right d-flex flex-wrap w-75 h-100 m-0 p-3">
+  <div class="main-right">
 
 
 
