--- a/ot-pruebatec-front/src/app/components/addform/addform.component.html
+++ b/ot-pruebatec-front/src/app/components/addform/addform.component.html
@@ -1,5 +1,23 @@
-<section class="form-wrapper d-flex w-100 h-100 m-0 p-0">
+<section class="form-wrapper">
 
-    
+
+   
+        <mat-form-field appearance="fill">
+          <mat-label>Title</mat-label>
+          <input matInput>
+        </mat-form-field>
+        <br>
+        <mat-form-field appearance="fill">
+          <mat-label>Category</mat-label>
+          <mat-select>
+            <mat-option value="Nature">Nature</mat-option>
+            <mat-option value="Cities">Cities</mat-option>
+          </mat-select>
+        </mat-form-field>
+        <br>
+        <mat-form-field appearance="fill">
+          <mat-label>Description</mat-label>
+          <textarea matInput></textarea>
+        </mat-form-field>
 
 </section>
