--- a/ot-pruebatec-front/src/app/components/main/main.component.scss
+++ b/ot-pruebatec-front/src/app/components/main/main.component.scss
@@ -3,24 +3,27 @@
 
 .main-wrapper {
 
- 
-    border: 1px solid white;
+    display: flex;
+    width: 100%;
+    height: 100%;
 
 }
 
 .main-left {
     
-    border: 1px solid black;
+    display: flex;
+    flex-direction: column;
+    width: 30%;
+    height: 100%;
 
-    .addform {
-
-        border: 1px solid black;
-        
-    }
-    
 }
 
 .main-right {
+
+    display: flex;
+    flex-wrap: wrap;
+    width: 70%;
+    height: 100%;
     
     border: 1px solid white;
     padding: 2em;
