--- a/ot-pruebatec-front/src/app/components/main/main.component.html
+++ b/ot-pruebatec-front/src/app/components/main/main.component.html
@@ -9,8 +9,6 @@
 
   <div class="main-right">
 
-
-
     <div class="card-content">
 
         <nz-card nzHoverable [nzCover]="coverTemplate">
@@ -18,6 +16,8 @@
           <nz-card-meta nzTitle="Europe Street beat" nzDescription="www.instagram.com"></nz-card-meta>
 
           <p>Category</p>
+
+          <i nz-icon nzType="edit" nzTheme="outline"></i>
 
         </nz-card>
 
