--- a/ot-pruebatec-front/src/app/components/main/main.component.scss
+++ b/ot-pruebatec-front/src/app/components/main/main.component.scss
@@ -6,6 +6,7 @@
     display: flex;
     width: 100%;
     height: 100%;
+    padding: 2em;
 
 }
 
@@ -24,6 +25,8 @@
     flex-wrap: wrap;
     width: 70%;
     height: 100%;
+    overflow-x: hidden;
+    overflow-y: scroll;
     
     border: 1px solid white;
     padding: 2em;
