header color changes

--- a/ot-pruebatec-front/src/app/components/header/header.component.html
+++ b/ot-pruebatec-front/src/app/components/header/header.component.html
@@ -2,13 +2,13 @@
 
     <div class="logo-box d-flex w-50 h-75 justify-content-between align-items-center">
 
-        <img class="ossian-logo" src="../../../assets/images/ossian_logo.png" alt="ossian-logo">
+        <img class="ossian-logo" src="../../../assets/images/ossian_logo_2.png" alt="ossian-logo">
 
-        <p class="m-0 mt-2">Prueba técnica para candidatos PHP FullStack</p>
+        <p class="m-0 mt-2">Prueba técnica para candidatos <span>PHP FullStack</span></p>
         
     </div>
 
-    <div class="slogan d-flex w-25 h-75 justify-content-end align-items-center">
+    <div class="slogan">
 
         <p class="m-0 mr-5"> Consultoría Digital</p>
 
