--- a/ot-pruebatec-front/src/app/components/header/header.component.scss
+++ b/ot-pruebatec-front/src/app/components/header/header.component.scss
@@ -9,19 +9,39 @@
 
 .logo-box {
     
-    border-bottom: 1px solid white;
+    border-bottom: 3px solid $prussian-blue;
     margin: 0em 0em 2em 5em;
 
+    .ossian-logo {
+        height: 40%;
+    }
+
     p {
-        color: white;
-        font-weight: 100;
+        color: $prussian-blue;
+        font-weight: 300;
+
+        span {
+
+            font-weight: 800;
+        }
+
     }
 }
 
 .slogan {
 
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    width: 25%;
+    margin: 0px;
+    padding: 0px;
     font-family: 'Gotham', sans-serif;
     font-weight: 800;
-    color: white;
+    color: $prussian-blue;
     letter-spacing: 0.2em;
+
+    p {
+        margin: 0px;
+    }
 }
