--- a/ot-pruebatec-front/src/app/components/main/main.component.html
+++ b/ot-pruebatec-front/src/app/components/main/main.component.html
@@ -9,13 +9,13 @@
 
   <div class="main-right">
 
-    <div class="card-content">
+    <div class="card-content" *ngFor="let card of data">
 
         <nz-card nzHoverable [nzCover]="coverTemplate">
 
-          <nz-card-meta nzTitle="Europe Street beat" nzDescription="www.instagram.com"></nz-card-meta>
+          <nz-card-meta nzTitle="{{card.title}}" nzDescription="{{card.description}}"></nz-card-meta>
 
-          <p>Category</p>
+          <p>{{card.category}}</p>
 
           <i nz-icon nzType="edit" nzTheme="outline"></i>
 
@@ -23,7 +23,7 @@
 
         <ng-template #coverTemplate>
 
-          <img alt="example" src="https://os.alipayobjects.com/rmsportal/QBnOOoLaAfKPirc.png" />
+          <img alt="example" src="{{card.url}}" />
 
         </ng-template>
 
