--- a/ot-pruebatec-front/src/app/components/main/main.component.scss
+++ b/ot-pruebatec-front/src/app/components/main/main.component.scss
@@ -28,13 +28,14 @@
     overflow-x: hidden;
     overflow-y: scroll;
     
-    border: 1px solid white;
+    border: 1px solid black;
     padding: 2em;
 
     .card-content {
 
         width: 300px;
         height: auto;
+        border: 1px solid black;
 
         .ant-card {
         
