--- a/ot-pruebatec-front/src/app/components/header/header.component.html
+++ b/ot-pruebatec-front/src/app/components/header/header.component.html
@@ -10,7 +10,7 @@
 
     <div class="slogan">
 
-        <p class="m-0 mr-5"> Consultoría Digital</p>
+        <p class="m-0 mr-5"> Daniel Vazquez </p>
 
     </div>
 
