--- a/ot-pruebatec-front/src/app/components/addform/addform.component.html
+++ b/ot-pruebatec-front/src/app/components/addform/addform.component.html
@@ -3,7 +3,7 @@
         <h1>Nuevo Post.</h1>
         <p>Aquí puedes incluir un nuevo post. Recuerda elegir entre las dos categorias.</p>
    
-        <form class="form-box" #addForm="ngForm" (submit)="addCard(addForm)">
+        <form class="form-box" #addForm="ngForm" (ngSubmit)="addPost(addForm)">
 
             <mat-form-field appearance="fill">
               <mat-label>Title</mat-label>
@@ -25,10 +25,12 @@
     
             <h2>Añade una foto.</h2>
             <p>Aquí puedes subir una foto.</p>
+
+            <upload-app></upload-app>
     
-            <nz-upload nzAction="https://www.mocky.io/v2/5cc8019d300000980a055e76" nzListType="picture" name="url" url ngModel>
+            <!-- <nz-upload nzAction="https://www.mocky.io/v2/5cc8019d300000980a055e76" nzListType="picture" name="url" url ngModel>
                 <button nz-button><i nz-icon nzType="upload"></i>Upload</button>
-            </nz-upload>
+            </nz-upload> -->
     
             <div class="button-box">
     
