--- a/ot-pruebatec-front/src/app/components/edit/edit.component.html
+++ b/ot-pruebatec-front/src/app/components/edit/edit.component.html
@@ -1,1 +1,14 @@
-<p>edit works!</p>
+<section class="edit-wrapper">
+
+    <div class="edit-main-left">
+
+        
+
+    </div>
+    
+    <div class="edit-main-right">
+
+
+    </div>
+
+</section>
