--- a/ot-pruebatec-front/src/app/components/edit/edit.component.html
+++ b/ot-pruebatec-front/src/app/components/edit/edit.component.html
@@ -8,6 +8,11 @@
     
     <div class="edit-main-right">
 
+        <h1>Quieres cambiar algo?</h1>
+        <p>Aquí lo puedes hacer</p>
+
+        <app-editform></app-editform>
+
 
     </div>
 
