--- a/ot-pruebatec-front/src/app/components/edit/edit.component.scss
+++ b/ot-pruebatec-front/src/app/components/edit/edit.component.scss
@@ -5,23 +5,36 @@
     display: flex;
     width: 100%;
     height: 100%;
-    border: 1px solid blue;
+    font-family: 'Gotham',sans-serif;
+  
 
     .edit-main-left {
 
         display: flex;
         width: 40%;
         height: 100%;
-        border: 1px solid black;
 
     }
 
     .edit-main-right {
         
         display: flex;
+        flex-direction: column;
         width: 60%;
         height: 100%;
-        border: 1px solid black;
+        padding: 2em;
+
+        h1 {
+            font-size: 3em;
+            font-weight: 800;
+            color: $prussian-blue;
+            margin: 0em 0em 0.5em 0em;
+        }
+
+        p {
+            font-size: 1.2em;
+        }
+
 
     }
 }
