delete function ok

--- a/ot-pruebatec-front/src/app/components/addform/addform.component.html
+++ b/ot-pruebatec-front/src/app/components/addform/addform.component.html
@@ -26,8 +26,8 @@
             <h2>Añade una foto.</h2>
             <p>Aquí puedes subir una foto.</p>
 
-            <!-- <upload-app name="url" url ngModel></upload-app> -->
-            <input type="file" ngModel name="url" #url>
+            <!--Upload new image-->
+            <upload-app name="url" url ngModel></upload-app>
     
             <div class="button-box">
     
