--- a/ot-pruebatec-front/src/app/components/main/main.component.scss
+++ b/ot-pruebatec-front/src/app/components/main/main.component.scss
@@ -1,4 +1,4 @@
-@import '../../../../../colors.scss';
+@import '../../../colors.scss';
 
 
 .main-wrapper {
@@ -42,6 +42,38 @@
     }
 
     .postcard {
+
         width: 300px;
         height: auto;
+    
+        h3 {
+
+            font-family: 'Gotham', sans-serif;
+            font-weight: 800;
+            font-size: 2em;
+            color: $prussian-blue;
+            margin-bottom: 0.1em;
+        
+        }
+
+        h4 {
+            font-family: 'Gotham',sans-serif;
+            font-weight: 400;
+            font-size: 1.2em;
+            color: $blue-sapphire;
+        
+        }
+
+        i {
+            font-size: 1.4em;
+            transition: $transition;
+            margin-right: 1em;
+        }
+
+        i:hover {
+            font-size: 1.8em;
+            transition: $transition;
+        }
+
+
     }
