--- a/ot-pruebatec-front/src/app/components/editform/editform.component.scss
+++ b/ot-pruebatec-front/src/app/components/editform/editform.component.scss
@@ -3,22 +3,42 @@
 .form-wrapper {
 
     display: flex;
-    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     width: 100%;
-    height: auto;
+    height: 100%;
     padding: 2em;
     border-right: 5px solid $prussian-blue;
-  
 
-    .form-box {
+    .form-content {
+        display: flex;
+        width: 80%;
+        height: 80%;
+    }
+    
+    .edit-form-left {
+
+        display: flex;
+        width: 50%;
+        height: 100%;
+        padding: 3em;
+
+        img {
+
+            width: 100%;
+            height: auto;
+        }
+    }
+    .edit-form-right {
+
         display: flex;
         flex-direction: column;
-        width: 100%;
-        height: auto;
-        font-family: 'Gotham', sans-serif;
+        width: 50%;
+        height: 100%;
 
         h1 {
-        
+            
+            font-family: 'Gotham', sans-serif;
             font-size: 3em;
             font-weight: 800;
             color: $prussian-blue;
@@ -26,23 +46,29 @@
         
         }
     
-        h2 {
-    
-            font-size: 2em;
-            font-weight: 800;
-            color: $prussian-blue;
-            margin-bottom: 0.3em;
-    
+        p {
+            width: 60%;
+            color: $blue-sapphire;
+            font-size: 1.2em;
+            margin-bottom: 1em;
         }
+
     }
 
 
-    p {
-        width: 60%;
-        color: $blue-sapphire;
-        font-size: 1em;
-        margin-bottom: 1em;
+
     }
+
+  
+
+    .form-box {
+        
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        height: auto;
+        
+        
 
     .button-box {
 
