--- a/ot-pruebatec-front/src/app/components/header/header.component.html
+++ b/ot-pruebatec-front/src/app/components/header/header.component.html
@@ -1,16 +1,23 @@
 <section class="header-wrapper d-flex w-100 h-100 justify-content-between m-0 p-0">
 
     <div class="logo-box d-flex w-50 h-75 justify-content-between align-items-center">
-
-        <img class="ossian-logo" src="../../../assets/images/ossian_logo_2.png" alt="ossian-logo">
-
-        <p class="m-0 mt-2">Prueba técnica para candidatos <span>PHP FullStack</span></p>
         
+        <img class="ossian-logo" src="../../../assets/images/ossian_logo_2.png" alt="ossian-logo">
+        
+        <div class="header-title d-flex w-50 h-75 align-items-end justify-content-center flex-column m-0 p-0">
+        
+            <p class="m-0 mt-2">Prueba técnica para candidatos <span>PHP FullStack</span></p>
+            <p class="nombre m-0 p-0"> Daniel Vazquez </p>
+        
+        </div>
+
     </div>
+
+
+        
 
     <div class="slogan">
 
-        <p class="m-0 mr-5"> Daniel Vazquez </p>
 
     </div>
 
