card details fixed

--- a/ot-pruebatec-front/src/app/components/addform/addform.component.html
+++ b/ot-pruebatec-front/src/app/components/addform/addform.component.html
@@ -27,7 +27,7 @@
             <p>Aquí puedes subir una foto.</p>
 
             <!--Upload new image-->
-            <!-- <upload-app name="url" url ngModel></upload-app> -->
+            <!-- <upload-app></upload-app> -->
             <input type="file" ngModel name="url" #imageInput>
     
             <div class="button-box">
