--- a/ot-pruebatec-front/src/app/components/addform/upload.component.html
+++ b/ot-pruebatec-front/src/app/components/addform/upload.component.html
@@ -1,6 +1,6 @@
 
-<nz-upload nzAction="https://www.mocky.io/v2/5cc8019d300000980a055e76" [nzTransformFile]="transformFile">
+<nz-upload nzAction="https://www.mocky.io/v2/5cc8019d300000980a055e76" [nzTransformFile]="transformFile" name="url" url ngModel #imageInput>
 
     <button nz-button><i nz-icon nzType="upload"></i> Upload</button>
-
+    
 </nz-upload>
