last changes and go

--- a/ot-pruebatec-front/src/app/components/main/main.component.html
+++ b/ot-pruebatec-front/src/app/components/main/main.component.html
@@ -13,6 +13,10 @@
 
       <!--iteracion con los posts-->
 
+
+        <app-cardboot></app-cardboot>
+
+<!-- 
       <nz-card class="postcard" nzHoverable [nzCover]="coverTemplate" *ngFor="let card of data">
 
         <nz-card-meta></nz-card-meta>
@@ -26,7 +30,7 @@
         <a routerLink="update/{{card.id}}"><i nz-icon nzType="edit" nzTheme="outline"></i></a>
       <a (click)="deletePost(card.id)"><i nz-icon nzType="delete" nzTheme="outline"></i></a>
         
-      </nz-card>
+      </nz-card> -->
 
     </div>
 
@@ -34,16 +38,5 @@
 
 </section>
 
-<!-- <div class="card-columns">
-  <div class="card" *ngFor="let card of data">
-    <img src="{{card.url}}" class="card-img-top" alt="...">
-    <div class="card-body">
-      <h3 class="card-title">{{card.title}}</h3>
-      <h4>{{card.category}}</h4>
-      <p class="card-text">{{card.description}}</p>
-      <a routerLink="update/{{card.id}}"><i nz-icon nzType="edit" nzTheme="outline"></i></a>
-      <a (click)="deletePost(card.id)"><i nz-icon nzType="delete" nzTheme="outline"></i></a>
-    </div>
-  </div>
-</div> -->
+
 
